# bj-sfml

./: CMakeLists.txt  main.cpp
include/: art.h  cards.h  computer.h  game.h  main.h  player.h  rules.h
src/: art.cpp  cards.cpp  computer.cpp  game.cpp  player.cpp
