cmake_minimum_required(VERSION 3.19.8)
project(blackjack)
set(SFMLLinkers -lsfml-graphics -lsfml-window -lsfml-system)
include_directories(include/)
add_executable(blackjack main.cpp src/player.cpp src/computer.cpp src/cards.cpp src/game.cpp src/art.cpp)
target_link_libraries(blackjack ${SFMLLinkers})